--- a/public/style.css
+++ b/public/style.css
@@ -3,8 +3,24 @@ font-family: 'Nunito';
 margin: 0;
 //background-color: black;
 }
+#jlabel {
 
-
+  border: 2px solid gray;
+  color: gray;
+  background-color: white;
+  padding: 8px 20px;
+  border-radius: 8px;
+  font-size: 16px;
+  font-weight: bold;
+  pointer:cursor;
+}
+input[type=file] {
+  font-size: 100px;
+  position: absolute;
+  left: 0;
+  top: 0;
+  opacity: 0;
+}
 input[type=submit] {
   padding:5px 15px;
   background:#7b507a;
@@ -13,6 +29,7 @@ input[type=submit] {
     -webkit-border-radius: 5px;
     border-radius: 5px;
     color:#fff
+    width:200px;
   }
 
 form div img{
