--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ margin: 0;
 
   border: 2px solid gray;
   color: gray;
-  background-color: white;
+  //background-color: white;
   padding: 8px 20px;
   border-radius: 8px;
   font-size: 16px;
