--- a/public/style.css
+++ b/public/style.css
@@ -15,7 +15,7 @@ margin: 0;
   pointer:cursor;
 }
 input[type=file] {
-  font-size: 100px;
+  font-size: 10px;
   position: absolute;
   left: 0;
   top: 0;
@@ -29,7 +29,7 @@ input[type=submit] {
     cursor:pointer;
     -webkit-border-radius: 5px;
     border-radius: 5px;
-    color:#fff
+    color:#fff;
     width:200px;
   }
 
