--- a/public/style.css
+++ b/public/style.css
@@ -66,7 +66,7 @@ z-index: -999999999;
 // *{border:1px solid red}
 
 #contain{
-  margin:auto;
+  float:left;
   background-color: rgba(245,245,245, 0.9);
   //margin-top:250px
   border-radius: 6px;
